<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.juliocmbueno</groupId>
    <artifactId>projectionQuery</artifactId>
    <version>3.0.0</version>
    <packaging>pom</packaging>
    <name>projection-query</name>
    <description>Type-safe dynamic projection spring data for Java</description>
    <url>https://github.com/juliocmbueno/jb-projects-projection-query</url>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>julio</id>
            <name>Júlio Bueno</name>
            <email>juliocmbuenotrabalho@outlook.com</email>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/juliocmbueno/jb-projects-projection-query</url>
        <connection>scm:git:https://github.com/juliocmbueno/jb-projects-projection-query.git</connection>
        <developerConnection>scm:git:https://github.com/juliocmbueno/jb-projects-projection-query.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Versões centrais -->
        <maven.source.plugin.version>3.4.0</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.5.0</maven.javadoc.plugin.version>
        <junit.jupiter.version>5.12.2</junit.jupiter.version>
        <junit.platform.suite.engine>1.12.2</junit.platform.suite.engine>
        <hibernate.version>6.6.22.Final</hibernate.version>
    </properties>

    <modules>
        <module>projection-core</module>
        <module>projection-spring-data</module>
        <module>projection-examples</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-suite-engine</artifactId>
                <version>${junit.platform.suite.engine}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
    </dependencies>

    <build>
        <plugins>
            <!-- Sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
            </plugin>

            <!-- GPG signing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals><goal>sign</goal></goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Sonatype Central -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>ci</id>
            <build>
                <plugins>
                    <!-- Code Coverage -->
                    <plugin>
                        <groupId>com.github.hazendaz.maven</groupId>
                        <artifactId>coveralls-maven-plugin</artifactId>
                        <version>5.0.0</version>
                        <configuration>
                            <!--suppress UnresolvedMavenProperty -->
                            <repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.14</version>

                        <configuration>
                            <excludes>
                                <exclude>br/com/jbProjects/Application.class</exclude>
                                <exclude>br/com/jbProjects/domain/**</exclude>
                            </excludes>
                        </configuration>
                        
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>

                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
